--- a/flutter_camera/pubspec.yaml
+++ b/flutter_camera/pubspec.yaml
@@ -26,12 +26,13 @@ dependencies:
   camera:
   path_provider:
   path:
+  motion_sensors: ^0.0.4
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.1
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +43,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
