--- a/MyNews/app/src/main/AndroidManifest.xml
+++ b/MyNews/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyNews">
-        <activity android:name=".view.WebViewActivity"></activity>
+        <activity android:name=".test.dagger2.DaggerActivity"></activity>
+        <activity android:name=".view.WebViewActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
