--- a/MyNews/app/src/main/AndroidManifest.xml
+++ b/MyNews/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MyNews">
         <activity android:name=".test.dagger2.DaggerActivity" />
         <activity android:name=".view.WebViewActivity" />
