--- a/MyNews/app/src/main/AndroidManifest.xml
+++ b/MyNews/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.MyNews">
+        android:theme="@style/Theme.MyNews"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".DetailActivity"></activity>
         <activity android:name=".test.dagger2.DaggerActivity" />
         <activity android:name=".view.WebViewActivity" />
         <activity android:name=".MainActivity">
