--- a/console/Console/Console.vcxproj
+++ b/console/Console/Console.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="Stock.h" />
     <ClInclude Include="struct.h" />
+    <ClInclude Include="time.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
